Added HTML structure of weather application.
Built static search bar, daily and weekly weather report sections, and local date-time information. Added credits line.

--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,15 @@
-h1 {
-  color: powderblue;
-  font-weight: 100;
-  background-color: aqua;
-  text-align: center;
-  margin: 0 auto;
+ul {
+  list-style-type: none;
+  display: table-row;
+}
+
+.include-credits {
+  max-width: 520px;
+  margin: 30px auto;
+}
+
+.weather-app {
+  padding: 25px;
+  border: 1px solid gainsboro;
+  border-radius: 7px;
 }
